<resources>
    <string name="app_name">TaskMaster</string>
    <string name="task_detail">task detail</string>
    <string name="detail">detail</string>
    <string name="task_title">Task title</string>
    <string name="add_task">Add Task</string>
    <string name="submitted">Submitted</string>
    <string name="task_description">Task description</string>
    <string name="task">Task</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="status">status</string>
    <string name="my_tasks">My Tasks</string>
    <string name="all_tasks">All Tasks</string>
    <string name="todo">TODO</string>
    <string name="username">username</string>
    <string name="save">Save</string>
    <string name="textview">TextView</string>
    <string name="sign_out">Sign Out</string>
    <string name="attach_file">Attach File</string>
</resources>